[package]
name = "beatoraja-external"
version.workspace = true
edition.workspace = true

[dependencies]
discord-rpc.workspace = true
beatoraja-core.workspace = true
beatoraja-types.workspace = true
beatoraja-song.workspace = true
beatoraja-skin.workspace = true
bms-model.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
arboard.workspace = true
image.workspace = true
rusqlite = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
