[package]
name = "beatoraja-ir"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-core.workspace = true
beatoraja-types.workspace = true
beatoraja-song.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
md-5.workspace = true
sha2.workspace = true
regex.workspace = true
encoding_rs.workspace = true
lazy_static.workspace = true
quick-xml.workspace = true

[dev-dependencies]
