[package]
name = "beatoraja-launcher"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

beatoraja-core = { workspace = true }
beatoraja-audio = { workspace = true }
beatoraja-input = { workspace = true }
beatoraja-ir = { workspace = true }
beatoraja-skin = { workspace = true }
beatoraja-play = { workspace = true }
beatoraja-external = { workspace = true }
beatoraja-state = { workspace = true }
beatoraja-types = { workspace = true }
bms-model = { workspace = true }
beatoraja-song = { workspace = true }
arboard = { workspace = true }
cpal = { workspace = true }
rfd = { workspace = true }
open = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
winit = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
encoding_rs = { workspace = true }
rusqlite = { workspace = true }
