[package]
name = "beatoraja-modmenu"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-types.workspace = true
beatoraja-core.workspace = true
beatoraja-play.workspace = true
beatoraja-skin.workspace = true
beatoraja-select.workspace = true
beatoraja-pattern.workspace = true
beatoraja-audio.workspace = true
md-processor.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
egui.workspace = true

[dev-dependencies]
