[package]
name = "beatoraja-obs"
version.workspace = true
edition.workspace = true

[dependencies]
beatoraja-core.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
sha2.workspace = true
base64.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
