[package]
name = "beatoraja-pattern"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-core.workspace = true
beatoraja-types.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
