[package]
name = "beatoraja-play"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-types.workspace = true
beatoraja-core.workspace = true
beatoraja-audio.workspace = true
beatoraja-render.workspace = true
beatoraja-input.workspace = true
beatoraja-song.workspace = true
beatoraja-ir.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
ffmpeg-next = { workspace = true, optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]

[dev-dependencies]
