[package]
name = "beatoraja-skin"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-types.workspace = true
beatoraja-core.workspace = true
beatoraja-play.workspace = true
beatoraja-audio.workspace = true
beatoraja-input.workspace = true
beatoraja-song.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
encoding_rs.workspace = true
regex.workspace = true
chrono.workspace = true
beatoraja-render.workspace = true
mlua.workspace = true
ffmpeg-next = { workspace = true, optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "skin_loader_bench"
harness = false
